# vim-backend

./: README.md
hackathon/: CMakeLists.txt  README.md  generator.hpp  hackathon.abi  hackathon.cpp  hackathon.hpp  structures.hpp
hackathon/scripts/: debug_autorization.sh  debug_contract2.sh
hackathon_plugin/: CMakeLists.txt  hackathon_plugin.cpp
hackathon_plugin/include/eosio/hackathon_plugin/: hackathon_plugin.hpp
